--- a/cours.html
+++ b/cours.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOULLOUZ Ilyass - Education Fellow</title>
+    <title>BOULLOUZ Ilyass - Cours</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -12,31 +12,35 @@
         <div class="header-container">
             <img src="images/43.png" alt="Introduction Image" class="header-image">
             <div class="header-text">
-                <h1>Les Vecteurs gaussiens</h1>
+                <h1>Ici vous trouvez des cours</h1>
                 <p>BOULLOUZ Ilyass</p>
             </div>
         </div>
         <nav>
             <ul class="circular-menu">
-                <li><a href="#">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="cours.html">Cours</a></li>
-                <li><a href="TD.html">Travaux Dirigés</a></li>
-                <li><a href="#">Devoir</a></li>
-                <li><a href="TP.html">Travaux Pratiques</a></li>
+                <li><a href="td.html">Travaux Dirigés</a></li>
+                <li><a href="Devoir.html">Devoir</a></li>
+                <li><a href="tp.html">Travaux Pratiques</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="intro">
             <div class="container">
-                <h2>Résumé</h2>
-                <p>Ceci est une introduction à mon site web où vous trouverez des ressources pédagogiques.</p>
+                <h2>Liste des Cours</h2>
+                <ul class="course-list">
+                    <li><a href="cours/Vecteur aléatoir.pdf">Cours 1 : Vecteur aléatoir</a></li>
+                    <li><a href="cours/Variable normale.pdf">Cours 2 : Variable aléatoire</a></li>
+                    <li><a href="cours/Vecteur gaussien.pdf">Cours 3 : Vecteur gaussien</a></li>
+                </ul>
             </div>
         </section>
     </main>
     <footer>
         <div class="container">
-            <p>&copy; 2024 BOULLOUZ Ilyass. Tous droits réservés.</p>
+            <p>&copy; 2024 BOULLOUZ Ilyass: Ingénieur civil et prof agrégé en Mathématiques.</p>
         </div>
     </footer>
 </body>
