--- a/Devoir.html
+++ b/Devoir.html
@@ -20,9 +20,9 @@
             <ul class="circular-menu">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="cours.html">Cours</a></li>
-                <li><a href="td.html">Travaux Dirigés</a></li>
-                <li><a href="devoir.html">Devoir</a></li>
-                <li><a href="tp.html">Travaux Pratiques</a></li>
+                <li><a href="TD.html">Travaux Dirigés</a></li>
+                <li><a href="Devoir.html">Devoir</a></li>
+                <li><a href="TP.html">Travaux Pratiques</a></li>
             </ul>
         </nav>
     </header>
