--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="circular-menu">
                 <li><a href="#">Accueil</a></li>
                 <li><a href="cours.html">Cours</a></li>
-                <li><a href="TD.html">T D</a></li>
+                <li><a href="TD.html">Travaux Dirigés</a></li>
                 <li><a href="#">Devoir</a></li>
                 <li><a href="TP.html">Travaux Pratiques</a></li>
             </ul>
