--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <main>
         <section class="intro">
             <div class="container">
-                <h2>Résumé</h2>
-                <p>Ceci est une introduction à mon site web où vous trouverez des ressources pédagogiques.</p>
+                <h2>Objectif de site</h2>
+                <p>J'aide les élèves dans le développement de leurs compétences scientifiques et l'amélioration de leur esprit mathématique   </p>
             </div>
         </section>
     </main>
     <footer>
         <div class="container">
-            <p>&copy; 2024 BOULLOUZ Ilyass. Tous droits réservés.</p>
+            <p>&copy; 2024 BOULLOUZ Ilyass: Ingénieur civil et prof agrégé en Mathématiques.</p>
         </div>
     </footer>
 </body>
