--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Accueil</a></li>
                 <li><a href="cours.html">Cours</a></li>
                 <li><a href="TD.html">Travaux Dirigés</a></li>
-                <li><a href="#">Devoir</a></li>
+                <li><a href="Devoir.html">Devoir</a></li>
                 <li><a href="TP.html">Travaux Pratiques</a></li>
             </ul>
         </nav>
