--- a/TD.html
+++ b/TD.html
@@ -12,8 +12,8 @@
         <div class="header-container">
             <img src="images/43.png" alt="Introduction Image" class="header-image">
             <div class="header-text">
-                <h1>Ici vous trouvez des TD</h1>
-                <p>BOULLOUZ Ilyass</p>
+                <h1>Ici vous trouvez des TDs</h1>
+                <p>BOULLOUZ </p>
             </div>
         </div>
         <nav>
@@ -43,3 +43,4 @@
     </footer>
 </body>
 </html>
+
