--- a/TD.html
+++ b/TD.html
@@ -12,7 +12,7 @@
         <div class="header-container">
             <img src="images/43.png" alt="Introduction Image" class="header-image">
             <div class="header-text">
-                <h1>Ici vous trouvez des TDs </h1>
+                <h1>Ici vous trouvez des TDS </h1>
                 <p>BOULLOUZ </p>
             </div>
         </div>
@@ -43,5 +43,6 @@
     </footer>
 </body>
 </html>
+
 
 
