--- a/TD.html
+++ b/TD.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOULLOUZ Ilyass - TD</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BOULLOUZ Ilyass - TD</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <img src="images/43.png" alt="Introduction Image" class="header-image">
-            <div class="header-text">
-                <h1>Ici vous trouvez des TDS </h1>
-                <p>BOULLOUZ </p>
-            </div>
-        </div>
-        <nav>
-            <ul class="circular-menu">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="cours.html">Cours</a></li>
-                <li><a href="TD.html">Travaux Dirigés</a></li>
-                <li><a href="Devoir.html">Devoir</a></li>
-                <li><a href="TP.html">Travaux Pratiques</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="intro">
-            <div class="container">
-                <h2>Liste des TD</h2>
-                <ul class="course-list">
-                    <li><a href="TD/TD'.pdf">TD : Variable et Vecteur gaussiens</a></li>
-                </ul>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 BOULLOUZ Ilyass: Ingénieur civil et prof agrégé en Mathématiques.</p>
-        </div>
-    </footer>
+  <header>
+    <div class="header-container">
+      <img src="images/43.png" alt="Image d’introduction" class="header-image">
+      <div class="header-text">
+        <h1>Ici vous trouvez des TD</h1>
+        <p>BOULLOUZ</p>
+      </div>
+    </div>
+    <nav>
+      <ul class="circular-menu">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="cours.html">Cours</a></li>
+        <li><a href="TD.html">Travaux Dirigés</a></li>
+        <li><a href="Devoir.html">Devoir</a></li>
+        <li><a href="TP.html">Travaux Pratiques</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="intro">
+      <div class="container">
+        <h2>Liste des TD</h2>
+        <ul class="course-list">
+          <li><a href="TD/TD_variable_vecteur_gaussiens.pdf">TD : Variables et vecteurs gaussiens</a></li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2024 BOULLOUZ Ilyass : Ingénieur civil et prof agrégé en Mathématiques.</p>
+    </div>
+  </footer>
 </body>
 </html>
-
-
-
